<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6F8FA">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@drawable/bg_page"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="#FFFFFF"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_name"
                    android:textSize="13sp"
                    android:textColor="#2C2C2C" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#7F2F5F" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="#FFFFFF"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_email"
                    android:textSize="13sp"
                    android:textColor="#2C2C2C" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#7F2F5F" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="#FFFFFF"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="********"
                    android:textSize="13sp"
                    android:textColor="#2C2C2C" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#7F2F5F" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
